# google-maps-cli-and-skill

./: .env.example  .gitignore  README.md  STARTUP.md  pyproject.toml
examples/jobs/: basic-smoke.yaml  batch-resume.yaml  proxy-env.yaml
skills/google-maps-scrape/: SKILL.md
skills/google-maps-scrape/agents/: openai.yaml
skills/google-maps-scrape/references/: failure-modes.md  job-spec.md  proxy-config.md
skills/google-maps-scrape/scripts/: validate_job.py
src/gmaps_cli/: __init__.py  __main__.py  checkpoints.py  cli.py  config.py  doctor.py  jobs.py  models.py  request_bootstrap.py  runner.py
src/gmaps_cli/browser/: __init__.py  selenium_backend.py
src/gmaps_cli/export/: csv_exporter.py
src/gmaps_cli/google_maps/: __init__.py  models.py  selenium_scraper.py
src/gmaps_cli/proxies/: __init__.py  manager.py
tests/: test_jobs.py  test_proxies.py  test_request_bootstrap.py  test_runner.py
